[package]
name = "atxtiny-hal"
version = "0.1.0"
authors = ["Andreas Galauner <andreas@galauner.de>"]
edition = "2021"

[[bin]]
name = "main"
test = false
bench = false
required-features = ["ms5611"]

[dependencies]
cfg-if = "1.0"
panic-halt = "1.0"
ufmt = "0.2"
nb = "1.1"
paste = "1.0"
embedded-hal = "1.0"
embedded-io = "0.6"
embedded-hal-bus = "0.3"
embedded-hal-nb = "1.0"
avr-device = { version = "0.7", features = ["critical-section-impl"] }
critical-section = "1.1.1"
fugit = "0.3"
fugit-timer = "0.1"
void = { default-features = false, version = "1.0" }
enumset = { version = "1.1", optional = true}

[features]
default = ["attiny817", "rt", "enumset", "ms5611", "fullpanic"]
device-selected = []
rt = ["avr-device/rt"]
fullpanic = []

# devices
#attiny414 = ["avr-device/attiny414", "device-selected"]
#attiny814 = ["avr-device/attiny814", "device-selected"]
#attiny816 = ["avr-device/attiny816", "device-selected"]
attiny817 = ["avr-device/attiny817", "device-selected"]
#attiny1614 = ["avr-device/attiny1614", "device-selected"]
#attiny1616 = ["avr-device/attiny1616", "device-selected"]
#attiny1617 = ["avr-device/attiny1617", "device-selected"]
#attiny3216 = ["avr-device/attiny3216", "device-selected"]
#attiny3217 = ["avr-device/attiny3217", "device-selected"]

# FIXME: add these to avr-device
attiny414 = ["device-selected"]
attiny814 = ["device-selected"]
attiny816 = ["device-selected"]
attiny1614 = ["device-selected"]
attiny1616 = ["device-selected"]
attiny1617 = ["device-selected"]
attiny3216 = ["device-selected"]
attiny3217 = ["device-selected"]

# features for bins
ms5611 = []

[patch.crates-io]
avr-device = { path = "../avr-device" }

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "z"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "z"

[[example]]
name = "gpio"
required-features = ["device-selected"]

[[example]]
name = "nvmctrl"
required-features = ["device-selected"]

[[example]]
name = "panic_serial"
required-features = ["device-selected"]

[[example]]
name = "serial"
required-features = ["device-selected"]

[[example]]
name = "serial_println"
required-features = ["device-selected"]

[[example]]
name = "spi"
required-features = ["device-selected"]

[[example]]
name = "tca_clock_tcb"
required-features = ["device-selected"]

[[example]]
name = "tca_delay"
required-features = ["device-selected"]

[[example]]
name = "tca_interrupt"
required-features = ["device-selected"]

[[example]]
name = "tca_pwm_hz"
required-features = ["device-selected"]

[[example]]
name = "tca_pwm"
required-features = ["device-selected"]

[[example]]
name = "tca_timer"
required-features = ["device-selected"]

[[example]]
name = "tcb_pwm"
required-features = ["device-selected"]

[[example]]
name = "twi"
required-features = ["device-selected"]

[[example]]
name = "watchdog"
required-features = ["device-selected"]

[[example]]
name = "evsys"
required-features = ["device-selected"]

[[example]]
name = "rtc_delay"
required-features = ["device-selected"]
